n8n-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: n8n
  name: svc-n8n
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 5678
  selector:
    app: n8n
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: n8n
  name: n8n
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - image: n8nio/n8n:latest
        name: n8n 
        ports:
        - containerPort: 5678
        volumeMounts:
        - name: n8n-csi-data
          mountPath: /home/node/.n8n
      volumes:
      - name: n8n-csi-data
        #emptyDir: {}
        persistentVolumeClaim:
          claimName: pvc-nfs-n8n
