istio-n8n.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: n8n-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
      - "n8n.example.com" 
    tls:
      mode: SIMPLE
      credentialName: n8n-credential 
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: n8n-virtualservice
spec:
  hosts:
    - "n8n.example.com"
  gateways:
    - n8n-gateway
  http:
  - match:
    route:
    - destination:
        port:
          number: 5678
        host: svc-n8n
